# rest-demo

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 10ee2444be82_.py  6fd5051b88be_delete_and_recreate.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
