[tool.poetry]
name = "tncars-fastapi"
version = "0.1.0"
description = "Buy and sell cars and bikes"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
readme = "README.md"
packages = [{include = "tncars_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.3"
uvicorn = "^0.20.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.5"}
passlib = "^1.7.4"
jose = "^1.0.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
